# fennara-godot-ai

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  fennara-staging-channel-pr-104.json  install.ps1  install.sh  llms.txt
.github/: CODEOWNERS  (+1 more)
docs/: cli.md  (+18 more)
local/crates/fennara-cli/: Cargo.toml
local/crates/fennara-cli/src/: app_layout.rs  csharp_support.rs  daemon_setup.rs  diagnostics.rs  doctor.rs  existing_addon_install.rs  main.rs  mcp_setup.rs  operation.rs  project_addon.rs  project_guidance.rs  project_install.rs  project_install_tests.rs  release_channel.rs  release_channel_tests.rs  release_client.rs  release_client_tests.rs  release_identity.rs  release_identity_tests.rs  release_manifest.rs  release_manifest_tests.rs  release_package.rs  release_package_tests.rs  release_update.rs  release_update_tests.rs  release_version.rs  release_version_tests.rs  self_update.rs  self_update_tests.rs  update_stage.rs  webview_prereq.rs  webview_runtime.rs
local/crates/fennara-cli/src/existing_addon_install/: tests.rs
local/crates/fennara-cli/src/operation/: artifact.rs  error.rs  journal.rs  redaction.rs  storage.rs  tests.rs
local/crates/fennara-cli/src/release_package/: install_lock.rs
local/crates/fennara-cli/src/update_apply/: launchers.rs  mod.rs  options.rs  process.rs  recovery.rs  transaction.rs
local/crates/fennara-cli/src/update_stage/: integrity.rs  tests.rs
local/crates/fennara-cli/tests/: operation_failures.rs
local/crates/fennara-daemon/: Cargo.toml
local/crates/fennara-daemon/src/: main.rs
(+383 files in other folders)
