[package]
name = "fennara-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.88"

[[bin]]
name = "fennara"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
getrandom = "0.3"
hmac = "0.12"
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.10"
sysinfo = "0.30"
toml_edit = "0.22"
ureq = { version = "2.12", features = ["json"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
